force-app/main/default/objects/SEL_ApplicationLog__c/SEL_ApplicationLog__c.object-meta.xml
<CustomObject>
    <description>Logs generated from application exceptions. Part of the Salesforce Enterprise Library (SEL) by Macjules Sevilla.</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>LOG{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>