force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_Category__c.field-meta.xml
<CustomField>
    <fullName>SEL_Category__c</fullName>
    <description>Use this to categorise the type of application log.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>