force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_Details__c.field-meta.xml
<CustomField>
    <fullName>SEL_Details__c</fullName>
    <description>Contains the serialized version of the SEL_AsyncDml__e.</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>