force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_ErrorId__c.field-meta.xml
<CustomField>
    <fullName>SEL_ErrorId__c</fullName>
    <description>In Flows, this is populated with Interview ID. 
In Apex Batch, this is populated with Async Apex Job ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>In Flows, this is populated with Interview ID. 
In Apex Batch, this is populated with Async Apex Job ID.</inlineHelpText>
    <label>Error ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>