force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_Exception__c.field-meta.xml
<CustomField>
    <fullName>SEL_Exception__c</fullName>
    <description>Represents the exception type.</description>
    <label>Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>