force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_Message__c.field-meta.xml
<CustomField>
    <fullName>SEL_Message__c</fullName>
    <description>The short version of the exception message.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>