force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_Method__c.field-meta.xml
<CustomField>
    <fullName>SEL_Method__c</fullName>
    <description>The method where the exception originated.</description>
    <label>Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>