force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_RunningUserId__c.field-meta.xml
<CustomField>
    <fullName>SEL_RunningUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that experienced the issue.</description>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApplicationLogs</relationshipName>
    <type>Lookup</type>
</CustomField>