force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_Source__c.field-meta.xml
<CustomField>
    <fullName>SEL_Source__c</fullName>
    <description>The class name where the exception occurred.</description>
    <label>Source</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>