force-app/main/default/objects/SEL_ApplicationLog__c/fields/SEL_Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>SEL_Stacktrace__c</fullName>
    <description>The entire stack trace of the exception.</description>
    <label>Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>