force-app/main/default/objects/SEL_ApplicationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SEL_Category__c</columns>
    <columns>SEL_Source__c</columns>
    <columns>SEL_Exception__c</columns>
    <columns>SEL_Message__c</columns>
    <columns>SEL_RunningUserId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>