force-app/main/default/objects/SEL_ApplicationLog__c/listViews/AllBatchExceptions.listView-meta.xml
<ListView>
    <fullName>AllBatchExceptions</fullName>
    <columns>NAME</columns>
    <columns>SEL_Source__c</columns>
    <columns>SEL_Method__c</columns>
    <columns>SEL_Exception__c</columns>
    <columns>SEL_Message__c</columns>
    <columns>SEL_ErrorId__c</columns>
    <columns>SEL_RunningUserId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SEL_Category__c</field>
        <operation>equals</operation>
        <value>Batch</value>
    </filters>
    <label>All Batch Exceptions</label>
</ListView>