force-app/main/default/objects/SEL_ApplicationLog__c/listViews/CreatedToday.listView-meta.xml
<ListView>
    <fullName>CreatedToday</fullName>
    <columns>NAME</columns>
    <columns>SEL_Source__c</columns>
    <columns>SEL_Exception__c</columns>
    <columns>SEL_Message__c</columns>
    <columns>SEL_ErrorId__c</columns>
    <columns>SEL_RunningUserId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>